--- a/index.html
+++ b/index.html
@@ -673,6 +673,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="c.css">
 </head>
 <body>
     <div class="container">
@@ -740,5 +741,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
