--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p id="org-name"></p>
       </header>
 
-      <div class="results-grid">
+      <div class="results-stack">
         <div class="card">
           <h3 class="card-title">Загальний підсумок</h3>
           <div class="summary">
@@ -90,8 +90,7 @@
             </div>
           </div>
         </div>
-
-      <table class="results-table" aria-label="Таблиця результатів">
+<table class="results-table" aria-label="Таблиця результатів">
         <thead>
           <tr>
             <th>Критерій</th>
@@ -117,7 +116,8 @@
     </section>
   </main>
 
-  <!-- Data + logic -->
+  <!-- Optional: Chart.js for radar chart -->
+<!-- Data + logic -->
   <script src="testData.js"></script>
   <script src="script.js"></script>
 </body>
