--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <tbody id="results-tbody"></tbody>
       </table>
 
+            </div>
+
       <div class="recommendations">
         <h3>Рекомендації щодо удосконалення</h3>
         <p class="hint">Сформовано на основі ваших відповідей (обраних варіантів) та рівня по критерію.</p>
@@ -116,7 +118,6 @@
     </section>
   </main>
 
-  <!-- Optional: Chart.js for radar chart -->
 <!-- Data + logic -->
   <script src="testData.js"></script>
   <script src="script.js"></script>
