--- a/index.html
+++ b/index.html
@@ -121,5 +121,11 @@
 <!-- Data + logic -->
   <script src="testData.js"></script>
   <script src="script.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init("PASTE_YOUR_PUBLIC_KEY_HERE");
+</script>
 </body>
+
 </html>
