--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
-  emailjs.init("PASTE_YOUR_PUBLIC_KEY_HERE");
+  emailjs.init("XtEqmJN2nmfftG2Zv");
 </script>
 </body>
 
