--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <button class="btn" id="start-btn" type="button">Почати тест</button>
+      <button class="btn" id="start-btn" type="button" onclick="startTest()" onclick="startTest()">Почати тест</button>
     </section>
 
     <section id="test-page" class="hidden" aria-live="polite">
