--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <button class="btn" id="start-btn" type="button" onclick="startTest()">Почати тест</button>
+      <button class="btn" id="start-btn" type="button">Почати тест</button>
     </section>
 
     <section id="test-page" class="hidden" aria-live="polite">
@@ -109,7 +109,7 @@
         <div id="recommendations-container"></div>
 
         <div class="actions">
-          <button class="btn btn-secondary" id="download-pdf" type="button">Завантажити PDF</button>
+          <button class="btn btn-secondary" id="copy-json" type="button">Скопіювати результати (JSON)</button>
           <button class="btn" id="restart" type="button">Пройти ще раз</button>
         </div>
       </div>
@@ -119,8 +119,6 @@
   <!-- Optional: Chart.js for radar chart -->
 <!-- Data + logic -->
   <script src="testData.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.29/dist/jspdf.plugin.autotable.min.js"></script>
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
