--- a/index.html
+++ b/index.html
@@ -109,16 +109,17 @@
         <div id="recommendations-container"></div>
 
         <div class="actions">
-          <button class="btn btn-secondary" id="copy-json" type="button">Скопіювати результати (JSON)</button>
+          <button class="btn btn-secondary" id="download-pdf" type="button">Завантажити PDF</button>
           <button class="btn" id="restart" type="button">Пройти ще раз</button>
         </div>
       </div>
     </section>
   </main>
 
-  <!-- Optional: Chart.js for radar chart -->
 <!-- Data + logic -->
   <script src="testData.js"></script>
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.29/dist/jspdf.plugin.autotable.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
