--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </section>
   </main>
 
+  <!-- Optional: Chart.js for radar chart -->
 <!-- Data + logic -->
   <script src="testData.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
