--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main class="container">
     <section id="start-page">
       <header class="header">
-        <h1>Критеріальна методика оцінювання потенціалу удосконалення системи формування персоналу</h1>
+        <h1>Критеріальна методика оцінювання потенціалу формування персоналу</h1>
         <p class="subtitle">Опитувальник для керівництва (самооцінка)</p>
       </header>
 
