--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Критеріальна методика оцінювання системи формування персоналу</title>
+  <title>Критеріальна методика оцінювання потенціалу удосконалення системи формування персоналу</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <main class="container">
     <section id="start-page">
       <header class="header">
-        <h1>Критеріальна методика оцінювання системи формування персоналу</h1>
+        <h1>Критеріальна методика оцінювання потенціалу удосконалення системи формування персоналу</h1>
         <p class="subtitle">Опитувальник для керівництва (самооцінка)</p>
       </header>
 
@@ -124,6 +124,7 @@
   <script src="testData.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.29/dist/jspdf.plugin.autotable.min.js"></script>
+<script src="fonts.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
