--- a/index.html
+++ b/index.html
@@ -126,5 +126,8 @@
 <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.29/dist/jspdf.plugin.autotable.min.js"></script>
 <script src="fonts.js"></script>
 <script src="script.js"></script>
+	<footer class="site-footer">
+  © 2026 Назва компанії. Усі права захищені.
+</footer>
 </body>
 </html>
