--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <script src="fonts.js"></script>
 <script src="script.js"></script>
 	<footer class="site-footer">
-  © 2026 Назва компанії. Усі права захищені.
+  © Глухий А.О., Глуха Т.О., 2025
 </footer>
 </body>
 </html>
